src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Entity__c</fullName>
        <label>Company Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Public Ltd Cos - Listed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Ltd Cos - Unlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pvt Ltd Cos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CRM_System__c</fullName>
        <label>Current CRM System</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Change_of_Status_2__c</fullName>
        <label>Date of Change of Status 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Change_of_Status__c</fullName>
        <label>Date of Change of Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Rating__c</fullName>
        <formula>IF( Decision_Making__c =true, &apos;*****&apos;,&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Making Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Making__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Making</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extentor_SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extentor SalesRep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Extentor SalesRep</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Person Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inside Sales</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Rating__c</fullName>
        <formula>Image( IF( Total_Points__c &lt;=5, &quot;servlet/servlet.FileDownload?file=01590000000Cn7w&quot;, IF( AND( Total_Points__c &gt;5, Total_Points__c &lt;=10),&quot;servlet/servlet.FileDownload?file=01590000000Cn7r&quot;, IF( AND( Total_Points__c &gt;10, Total_Points__c &lt;=15), &quot;servlet/servlet.FileDownload?file=01590000000Cn7c&quot;,  IF( AND( Total_Points__c &gt;15, Total_Points__c &lt;=20), &quot;servlet/servlet.FileDownload?file=01590000000Cn7X&quot;,&apos;0&apos;   ) )  )  ), &quot;Star Rating &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Of_Office__c</fullName>
        <label>Level Of Office</label>
        <picklist>
            <picklistValues>
                <fullName>Head Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Of_Employees__c</fullName>
        <label>No Of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>1-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_potential_users__c</fullName>
        <label>Number of potential users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pain__c</fullName>
        <label>Pain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Number__c</fullName>
        <label>Partner Portal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_For_Budget__c</fullName>
        <formula>IF( Budget__c=true,5,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points For Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_For_Decision_Making__c</fullName>
        <formula>IF( Decision_Making__c =true,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points For Decision Making</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_For_Need__c</fullName>
        <formula>IF(  Need__c  =true,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points For Need</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_For_TimeFrame__c</fullName>
        <formula>CASE( TEXT( TimeFrame__c ) , &apos;1 Month&apos;, 5, &apos;2 Month&apos;, 4,&apos;3 Month&apos;,3,&apos;4 Month&apos;,2,&apos;&gt;4 Month&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points For TimeFrame</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <label>Primary Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Professional Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com- One app and Force</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>If there Is no opportunity(D Profile) sales rep should give description.</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce AE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Salesforce AE)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Govt. Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Sector</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Std_Code__c</fullName>
        <label>Std Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeFrame__c</fullName>
        <label>TimeFrame</label>
        <picklist>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;4 Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <formula>Points_For_Budget__c + Points_For_Decision_Making__c  +  Points_For_Need__c  +  Points_For_TimeFrame__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_TurnOver__c</fullName>
        <label>Total TurnOver</label>
        <picklist>
            <picklistValues>
                <fullName>0-10 Crs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-100 Crs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-250 Crs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250-500 Crs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500-1000 Crs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000-2500 Crs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Coverted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Coverted Leads</label>
    </listViews>
    <listViews>
        <fullName>Delhi_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CITY</field>
            <operation>equals</operation>
            <value>Delhi</value>
        </filters>
        <label>Delhi Leads</label>
    </listViews>
    <listViews>
        <fullName>Leads_from_Salesforce</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>SFDC PL</value>
        </filters>
        <label>Leads from Salesforce</label>
    </listViews>
    <listViews>
        <fullName>Mumbai_Leads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CITY</field>
            <operation>contains</operation>
            <value>Mumbai</value>
        </filters>
        <filters>
            <field>LEAD.STATE</field>
            <operation>equals</operation>
            <value>Maharashtra</value>
        </filters>
        <label>Mumbai Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Peenya_Industrial_Area</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.ZIP</field>
            <operation>equals</operation>
            <value>560058</value>
        </filters>
        <label>Peenya Industrial Area</label>
    </listViews>
    <listViews>
        <fullName>SFDC_Passed_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>SFDC PL</value>
        </filters>
        <label>SFDC Passed Leads</label>
    </listViews>
    <listViews>
        <fullName>TamilNadu_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CITY</field>
            <operation>equals</operation>
            <value>Chennai</value>
        </filters>
        <filters>
            <field>LEAD.STATE</field>
            <operation>equals</operation>
            <value>TamilNadu</value>
        </filters>
        <label>TamilNadu Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <validationRules>
        <fullName>Budget_Amount_Can_Not_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(( Budget__c=true),( ISBLANK( Budget_Amount__c )))</errorConditionFormula>
        <errorMessage>Budget Amout Can Not be Blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Put_Partner_Portal_Number</fullName>
        <active>false</active>
        <description>Partner portal number should be there once lead is qualified</description>
        <errorConditionFormula>AND(  ISPICKVAL ( Status,&apos;Qualified&apos;) ,  ISBLANK( Partner_Portal_Number__c ))</errorConditionFormula>
        <errorMessage>Enter Partner Portal Number</errorMessage>
    </validationRules>
</CustomObject>